proyecto2/yaml/namespace.yml
apiVersion: v1
kind: Namespace
metadata:
  name: so1-proyecto2-202110531
spec: {}
status: {}
