proyecto2/yaml/go-box-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: go-server-box
spec:
  replicas: 1
  selector:
    matchLabels:
      app: go-server-box
  template:
    metadata:
      labels:
        app: go-server-box
    spec:
      containers:
      - name: go-container-box
        image: feribarra27/go-server-box:latest
        imagePullPolicy: Always
        ports:
        - containerPort: 3002
        resources:
          requests:
            cpu: "50m"
            memory: "32Mi"
          limits:
            cpu: "100m"
            memory: "64Mi"
---
apiVersion: v1
kind: Service
metadata:
  name: go-service-box
spec:
  selector:
    app: go-server-box
  ports:
    - protocol: TCP
      port: 3002
      targetPort: 3002
  type: ClusterIP
