proyecto2/yaml/go-loser-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: go-loser-consumer
spec:
  replicas: 1
  selector:
    matchLabels:
      app: go-loser-consumer
  template:
    metadata:
      labels:
        app: go-loser-consumer
    spec:
      containers:
      - name: go-container-loser
        image: feribarra27/go-loser-consumer:latest
        imagePullPolicy: Always
        ports:
        - containerPort: 3006
        resources:
          requests:
            cpu: "50m"
            memory: "128Mi"
          limits:
            cpu: "150m"
            memory: "256Mi"
---
apiVersion: v1
kind: Service
metadata:
  name: go-service-loser
spec:
  selector:
    app: go-loser-consumer
  ports:
    - protocol: TCP
      port: 3006
      targetPort: 3006
  type: ClusterIP
