proyecto2/yaml/go-swim-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: go-server-swim
spec:
  replicas: 1
  selector:
    matchLabels:
      app: go-server-swim
  template:
    metadata:
      labels:
        app: go-server-swim
    spec:
      containers:
      - name: go-container-swim
        image: feribarra27/go-server-swim:latest
        imagePullPolicy: Always
        ports:
        - containerPort: 3001
        resources:
          requests:
            cpu: "50m"
            memory: "16Mi"
          limits:
            cpu: "100m"
            memory: "32Mi"
---
apiVersion: v1
kind: Service
metadata:
  name: go-service-swim
spec:
  selector:
    app: go-server-swim
  ports:
    - protocol: TCP
      port: 3001
      targetPort: 3001
  type: ClusterIP
