proyecto2/yaml/go-winner-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: go-winner-consumer
spec:
  replicas: 1
  selector:
    matchLabels:
      app: go-winner-consumer
  template:
    metadata:
      labels:
        app: go-winner-consumer
    spec:
      containers:
      - name: go-container-winner
        image: feribarra27/go-winner-consumer:latest
        imagePullPolicy: Always
        ports:
        - containerPort: 3005
        resources:
          requests:
            cpu: "50m"
            memory: "16Mi"
          limits:
            cpu: "100m"
            memory: "32Mi"
---
apiVersion: v1
kind: Service
metadata:
  name: go-service-winner
spec:
  selector:
    app: go-winner-consumer
  ports:
    - protocol: TCP
      port: 3005
      targetPort: 3005
  type: ClusterIP
