proyecto2/yaml/rust-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: rust-server
spec:
  replicas: 1
  selector:
    matchLabels:
      app: rust-server
  template:
    metadata:
      labels:
        app: rust-server
    spec:
      containers:
      - name: rust-container
        image: feribarra27/rust-server:latest
        imagePullPolicy: Always
        ports:
        - containerPort: 8080
        resources:
          requests:
            cpu: "50m"
            memory: "16Mi"
          limits:
            cpu: "100m"
            memory: "32Mi"
---
apiVersion: v1
kind: Service
metadata:
  name: rust-service
spec:
  selector:
    app: rust-server
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8080
  type: LoadBalancer
