proyecto2/yaml/yo-run-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: go-server-run
spec:
  replicas: 1
  selector:
    matchLabels:
      app: go-server-run
  template:
    metadata:
      labels:
        app: go-server-run
    spec:
      containers:
      - name: go-container
        image: feribarra27/go-server-run
        ports:
        - containerPort: 3001
        resources:               # Aquí colocas los recursos
            requests:
              memory: "512Mi"      # Memoria mínima solicitada
              cpu: "250m"          # CPU mínima solicitada
            limits:
              memory: "2Gi"        # Límite máximo de memoria
              cpu: "500m"
---
apiVersion: v1
kind: Service
metadata:
  name: go-service-run
spec:
  selector:
    app: go-server-run
  ports:
    - protocol: TCP
      port: 3001
      targetPort: 3001
  type: LoadBalancer
