proyecto2/yaml/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: app-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  ingressClassName: nginx 
  rules:
  - http:
      paths:
      - path: /agronomia
        pathType: Prefix
        backend:
          service:
            name: rust-service
            port:
              number: 80
      - path: /ingenieria
        pathType: Prefix
        backend:
          service:
            name: go-service
            port:
              number: 80
